links now opens  at new tabs

--- a/src/index.html
+++ b/src/index.html
@@ -216,8 +216,16 @@
         <div class="footer__socials">
           <a class="footer__logo" href="#"></a>
           <div class="footer__socials-wrapper">
-            <a class="footer__facebook" href="https://www.facebook.com/namu.museum/"></a>
-            <a class="footer__instagram" href="https://www.instagram.com/namu.museum/"></a>
+            <a
+              class="footer__facebook"
+              href="https://www.facebook.com/namu.museum/"
+              target="_blank"
+            ></a>
+            <a
+              class="footer__instagram"
+              href="https://www.instagram.com/namu.museum/"
+              target="_blank"
+            ></a>
           </div>
         </div>
 
@@ -240,7 +248,11 @@
             <div id="contacts" class="footer__contacts">
               <h4 class="footer__title">Контакти:</h4>
 
-              <a class="footer__address" href="https://goo.gl/maps/PN9jgnNUQLVZhdgs9">
+              <a
+                class="footer__address"
+                href="https://goo.gl/maps/PN9jgnNUQLVZhdgs9"
+                target="_blank"
+                >
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
 
