--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,163 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Музей</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="images/namu-logo.svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/index.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+
+      <div class="header__top">
+
+        <a href="#menu" class="icon icon--menu"></a>
+
+        <a href="#" class="header__logo">
+          <img src="images/namu-logo.svg" alt="Na Mu logo" class="header__logo--img">
+        </a>
+      </div>
+
+      <div class="header__bottom">
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <div class="tickets">
+
+          <div class="tickets__text">КВИТКИ</div>
+
+          <a href="#" class="icon icon--tickets tickets__button"></a>
+        </div>
+
+        <div class="header__actions">
+          <a href="#actions" class="header__actions-link">ПОДІЇ</a>
+          <div class="header__actions-line"></div>
+        </div>
+      </div>
+    </header>
+
+    <aside id="menu" class="menu page__menu">
+      <div class="menu__top">
+        <nav class="menu__nav">
+
+          <a href="#" class="icon icon--close"></a>
+
+          <div class="menu__list">
+
+            <div class="menu__item">
+              <a href="#galery" class="menu__link">Галерея</a>
+              <a href="#actions" class="menu__link">Виставки та події</a>
+            </div>
+
+            <div class="menu__item">
+              <a href="#about-us" class="menu__link">Про Нас</a>
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </div>
+          </div>
+        </nav>
+
+        <div class="menu__line">
+          <div class="menu__line--styles"></div>
+        </div>
+
+        <div class="schedule">
+          <h3 class="schedule__title">Графік роботи</h3>
+          <ul class="schedule__list">
+            <li class="schedule__item">
+              <span class="schedule__bold">12:00 — 20:00</span>
+              середа
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__bold">12:00 — 20:00</span>
+              четвер
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__bold">12:00 — 20:00</span>
+              п’ятниця
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__bold">12:00 — 20:00</span>
+              субота
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__bold">12:00 — 20:00</span>
+              неділя
+            </li>
+          </ul>
+        </div>
+
+        <p class="menu__weekend">
+          <span class="menu__bold">Вихідні:</span>
+          понеділок, вівторок
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+        </p>
+      </div>
+      <div class="menu__bottom"></div>
+    </aside>
+
+    <main class="main">
+      <section class="actions" id="actions">
+
+        <h2 class="actions__title">Актуальні події</h2>
+
+        <div class="actions__container">
+
+          <article class="exibition">
+
+            <img src="images/exibition-1.png" alt="ВИСТАВКА 1" class="exibition__photo">
+
+            <div class="exibition__text">
+
+              <div class="exibition__info">
+                <p class="exibition__name">ВИСТАВКА</p>
+                <p class="exibition__date">26.08-29.11.2019</p>
+              </div>
+
+              <h3 class="exibition__title">Йду і повертаюсь</h3>
+
+              <p class="exibition__add-info">
+                Національний Художній Музей України презентує унікальну
+                частину колекції Градобанку - українське мистецтво другої
+                половини 1980-1995 років.
+              </p>
+            </div>
+
+          </article>
+          <article class="exibition">
+            <img src="images/exibition-2.png" alt="ВИСТАВКА 1" class="exibition__photo">
+
+            <div class="exibition__text">
+
+              <div class="exibition__info">
+                <p class="exibition__name">ВИСТАВКА</p>
+                <p class="exibition__date">26.08-29.11.2019</p>
+              </div>
+
+              <h3 class="exibition__title">І спогади і мрії</h3>
+
+              <p class="exibition__add-info">
+                Національний художній музей України до 100 річчя
+                від дня народження видатної української художниці
+                Тетяни Яблонської відкриває ретроспективну ювілейну
+                виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
