--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 
       <div class="header__menu">
         <ul class="header__list">
-          <li class="header__li">
+          <li class="header__item">
             <a href="index.html" class="header__link">Галерея</a>
           </li>
           <li class="header__item">
@@ -288,61 +288,99 @@
           </form>
         </div>
       </section>
-
-      <!-- ui -->
-      <section class="section ui">
-        <div class="section__container">
-          <div class="ui__block">
-            <h1 class="h1">Художній музей</h1>
-            <h2 class="h2">Художній музей</h2>
-            <h3 class="h3">Художній музей</h3>
-
-
-            <div class="text">
-              Національний художній музей України до 100 річчя від дня
-              народження видатної української художниці Тетяни Яблонської
-              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-            </div>
-            <div class="text text--size-2">
-              Національний художній музей України до 100 річчя від дня
-              народження видатної української художниці Тетяни Яблонської
-              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-            </div>
-            <div class="text text--size-3">
-              Національний художній музей України до 100 річчя від дня
-              народження видатної української художниці Тетяни Яблонської
-              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-            </div>
-            <div class="text text--size-4">
-              Національний художній музей України до 100 річчя від дня
-              народження видатної української художниці Тетяни Яблонської
-              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-            </div>
-
-
-            <a href="index.html" class="btn">
-              <p class="btn__text">Квитки</p>
-              <span class="btn__arrow"></span>
-            </a>
-
-
-            <form class="form">
-              <input
-                class="form__input"
-                name="email"
-                type="email"
-                placeholder="E-mail"
-                required
-              >
-              <button class="form__submit" type="submit"></button>
-            </form>
-          </div>
-        </div>
-      </section>
     </main>
 
     <!-- footer -->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__block">
+        <div class="footer__body">
+          <div class="footer__icons">
+            <a href="index.html" class="footer__logos">
+              <picture>
+                <img
+                  class="footer__logo"
+                  src="./img/header_logo.svg"
+                  alt="footer__logo"
+                  loading="lazy"
+                >
+              </picture>
+            </a>
+
+            <div class="footer__socials">
+              <a href="index.html" class="footer__social">
+                <picture>
+                  <img
+                    class="footer__icon"
+                    src="./img/footer_icon_1.svg"
+                    alt="footer__icon"
+                    loading="lazy"
+                  >
+                </picture>
+              </a>
+              <a href="index.html" class="footer__social">
+                <picture>
+                  <img
+                    class="footer__icon"
+                    src="./img/footer_icon_2.svg"
+                    alt="footer__icon"
+                    loading="lazy"
+                  >
+                </picture>
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__wrapper">
+            <div class="text text--size-3 footer__infos">
+              <div class="footer__info">
+                <div class="footer__cont">Графік роботи</div>
+                <div class="footer__cont">
+                  <p><span>12:00 — 20:00</span> середа</p>
+                  <p><span>12:00 — 20:00</span> четвер</p>
+                  <p><span>12:00 — 20:00</span> п’ятниця</p>
+                  <p><span>11:00 — 19:00</span> субота</p>
+                  <p><span>11:00 — 19:00</span> неділя</p>
+                </div>
+                <div class="footer__cont">
+                  <p><span>Вихідні:</span> понеділок, вівторок</p>
+                  <p>Каса припиняє роботу за 1 годину</p>
+                  <p>до закриття музею</p>
+                </div>
+              </div>
+              <div class="footer__info">
+                <div class="footer__cont">Контакти:</div>
+                <div class="footer__cont">
+                  <p>вул. М. Грушевського, 6; Київ, 01001</p>
+                  <p>тел. <a href="tel:+380442781357">+38 (044) 278-13-57</a></p>
+                  <p>факс <a href="tel:+380442787454">+38 (044) 278-74-54</a></p>
+                  <p>e-mail: <a href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a></p>
+                </div>
+              </div>
+            </div>
+
+            <ul class="text text--size-3 footer__items">
+              <li class="footer__item">
+                <a href="index.html" class="footer__link">Галерея</a>
+              </li>
+              <li class="footer__item">
+                <a href="index.html" class="footer__link">Про Нас</a>
+              </li>
+              <li class="footer__item">
+                <a href="index.html" class="footer__link">Виставки та події</a>
+              </li>
+              <li class="footer__item">
+                <a href="index.html" class="footer__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="text text--size-4 footer__bottom">
+          <p>Copyright © 2019. All Rights Reserved.</p>
+          <p>Designed by Zhyriada Marina</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
     <script src="./scripts/main.js" defer></script>
