Museum last commit

--- a/src/index.html
+++ b/src/index.html
@@ -43,13 +43,13 @@
               <div class="logo--photo-container">              
                 <a
                   class="photo__link"
-                  href="index.html"
+                  href="#"
                   onclick="return false"
                 >                
                   <img
                     class="logo logo--photo "
                     src="images/NA MU.svg"
-                    alt="MyBike"
+                    alt="Logo"
                   >               
                 </a>
               </div>                                      
@@ -295,9 +295,9 @@
                   <h2 class="subscribe__title">Підписка</h2>
                   <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
                   <form
+                    id="form"
                     action="#"
                     class="subscribe__send"
-                    onsubmit="return false"
                   >
                     <input
                       type="email"
@@ -326,11 +326,11 @@
       <div class="container">
         <div class="grid grid--footer">
           <div class="grid__item grid__item--on-phone-1 grid__item--laptop-1 grid__item--desctop-1">
-            <a href="index.html">
+            <a href="#">
               <img
                 class="logo"
                 src="images/NA MU.svg"
-                alt="MyBike"
+                alt="Logo"
               >
             </a>
           </div>
