page without image-scroll

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           <div class="header__info">
             <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-            <a href="#" class="button button--tickets">
+            <a href="#events" class="button button--tickets">
               <button class="button__title">КВИТКИ</button>
               <div class="button__arrow"></div>
             </a>
@@ -38,7 +38,7 @@
           </div>
 
           <div class="header__photo">
-            <p class="header__logo">NA<br>MU</p>
+            <a href="#" class="header__logo">NA<br>MU</a>
           </div>
 
           <a href="#menu" class="icon icon--menu"></a>
@@ -52,11 +52,11 @@
           <div class="menu__content">
             <div class="menu__block">
               <div class="nav">
-                <div class="nav__left">
+                <div class="nav__colomn">
                   <a href="#gallery" class="nav__link">Галерея</a>
                   <a href="#events" class="nav__link">Виставки та події</a>
                 </div>
-                <div class="nav__right">
+                <div class="nav__colomn">
                   <a href="#follow" class="nav__link">Про Нас</a>
                   <a href="#footer" class="nav__link">Контакти</a>
                 </div>
@@ -73,9 +73,9 @@
                     <span class="museum-info__text-bold">11:00 — 19:00</span> субота
                     <span class="museum-info__text-bold">11:00 — 19:00</span> неділя
                   </p>
-                  <p class="museum-info__work-column">
+                  <p class="museum-info__work-column museum-info__work-column--we">
                     <span class="museum-info__text-bold">Вихідні:</span>  понеділок, вівторок
-                    Каса припиняє роботу за 1 годину
+                    <br>Каса припиняє роботу за 1 годину
                     до закриття музею
                   </p>
                 </div>
@@ -96,7 +96,7 @@
               <img
                 src="./images/events/go-and-back.png"
                 alt="йду_і_повертаюсь"
-                class="event__picture"
+                class="event__picture event__picture--hover"
               >
               <div class="event__details">
                 <div class="event__details-top">
@@ -114,7 +114,7 @@
               <img
               src="./images/events/memories-dreams.png"
               alt="і спогади і мрії"
-              class="event__picture"
+              class="event__picture event__picture--hover"
               >
               <div class="event__details">
                 <div class="event__details-top">
@@ -132,10 +132,10 @@
               <div class="event__picture event__picture--lecture"></div>
               <div class="event__details event__details--lecture">
                 <div class="event__details-top event__details-top--lecture">
-                  <p class="event__type">ЛЕКЦІЯ</p>
+                  <p class="event__type event__type--lecture">ЛЕКЦІЯ</p>
                   <p class="event__date event__date--lecture">26/08/2019 - 11:00</p>
                 </div>
-                <h2 class="event__title-text">Від класицизму до романтизму</h2>
+                <h2 class="event__title-text event__title-text--lecture">Від класицизму до романтизму</h2>
               </div>
             </article>
           </div>
@@ -168,11 +168,37 @@
                 class="gallery__image gallery__image--narrow"
               >
             </div>
-            <div class="gallery__images gallery__images--tablet">
-              <img
-                src="./images/gallery/gooses.png"
-                alt="gooses"
-                class="gallery__image gallery__image--tablet">
+            <div class="gallery__scroll">
+              <div class="scroll__images">
+                <img src="./images/gallery/tall-narrow.png"
+                  alt="image_1"
+                  class="scroll__image scroll__image--active"
+                >
+
+                <img
+                  src="./images/gallery/gooses.png"
+                  alt="image_2"
+                  class="scroll__image scroll__image--active scroll__image--active-mob"
+                >
+
+                <img
+                  src="./images/gallery/gooses.png"
+                  alt="image_3"
+                  class="scroll__image"
+                >
+
+                <img
+                  src="./images/gallery/gooses.png"
+                  alt="image_4"
+                  class="scroll__image"
+                >
+              </div>
+              <div class="scroll-indicators">
+                <div class="scroll-indicator"></div>
+                <div class="scroll-indicator scroll-indicator--active"></div>
+                <div class="scroll-indicator"></div>
+                <div class="scroll-indicator"></div>
+              </div>
             </div>
           </div>
         </section>
@@ -185,9 +211,9 @@
             <form
               action="#"
               method="post"
-              onsubmit="this.reset(); return false;"
+              class="follow__form"
             >
-              <div class="follow__form">
+              <div class="follow__form-wrapper">
                 <input
                   type="email"
                   name="email"
@@ -219,19 +245,19 @@
             </div>
           </div>
           <div class="footer__contacts">
-            <div class="museum-info">
+            <div class="museum-info museum-info--footer">
               <p class="museum-info__title museum-info__title--footer">Графік роботи</p>
               <div class="museum-info__work museum-info__work--footer">
                 <p class="museum-info__work-column museum-info__work-column--footer">
                   <span class="museum-info__text-bold">12:00 — 20:00</span> середа
-                  <span class="museum-info__text-bold">12:00 — 20:00</span> четвер
-                  <span class="museum-info__text-bold">12:00 — 20:00</span> п’ятниця
-                  <span class="museum-info__text-bold">11:00 — 19:00</span> субота
-                  <span class="museum-info__text-bold">11:00 — 19:00</span> неділя
+                  <br><span class="museum-info__text-bold">12:00 — 20:00</span> четвер
+                  <br><span class="museum-info__text-bold">12:00 — 20:00</span> п’ятниця
+                  <br><span class="museum-info__text-bold">11:00 — 19:00</span> субота
+                  <br><span class="museum-info__text-bold">11:00 — 19:00</span> неділя
                 </p>
                 <p class="museum-info__work-column museum-info__work-column--footer">
                   <span class="museum-info__text-bold">Вихідні:</span>  понеділок, вівторок
-                  Каса припиняє роботу за 1 годину
+                  <br>Каса припиняє роботу за 1 годину
                   до закриття музею
                 </p>
               </div>
@@ -241,28 +267,40 @@
               <div class="museum-info__work-column museum-info__work-column--footer">
                 <a href="https://maps.app.goo.gl/eWg33E4KEhg31NJ47"
                 target="_blank"
-                class="museum-info__work-column museum-info__work-column--footer"
+                class="museum-info__work-column
+                museum-info__work-column--footer
+                museum-info__work-column--footer-hover"
                 >вул. М. Грушевського, 6; Київ, 01001</a>
                 <br><a href="tel:+38 044 278-13-57"
-                class="museum-info__work-column museum-info__work-column--footer"
+                class="museum-info__work-column
+                museum-info__work-column--footer
+                museum-info__work-column--footer-hover"
                 >тел. +38 (044) 278-13-57</a>
                 <br><a href="fax:+38 044 278-74-54"
-                class="museum-info__work-column museum-info__work-column--footer"
+                class="museum-info__work-column
+                museum-info__work-column--footer
+                museum-info__work-column--footer-hover"
                 >факс +38 (044) <br>278-74-54</a>
                 <br><a href="mailto:info@namu.kiev.ua"
-                class="museum-info__work-column museum-info__work-column--footer"
+                class="museum-info__work-column
+                museum-info__work-column--footer
+                museum-info__work-column--footer-hover"
                 >e-mail: info@namu.kiev.ua</a>
               </div>
             </div>
           </div>
 
+          <div class="footer__up">
+            <a href="#" class="footer__up-button"></a>
+          </div>
+
           <div class="nav nav--footer">
-            <div class="nav__left">
+            <div class="nav__colomn nav__colomn--footer">
               <a href="#gallery" class="nav__link nav__link--footer">Галерея</a>
               <a href="#events" class="nav__link nav__link--footer">Виставки та події</a>
             </div>
 
-            <div class="nav__right">
+            <div class="nav__colomn nav__colomn--footer">
               <a href="#follow" class="nav__link nav__link--footer">Про Нас</a>
               <a href="#footer" class="nav__link nav__link--footer">Контакти</a>
             </div>
