fix my errors whith button and tel/fax tags

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
             <a href="#events" class="button button--tickets">
-              <button class="button__title">КВИТКИ</button>
+              <div class="button__title">КВИТКИ</div>
               <div class="button__arrow"></div>
             </a>
 
@@ -271,12 +271,12 @@
                 museum-info__work-column--footer
                 museum-info__work-column--footer-hover"
                 >вул. М. Грушевського, 6; Київ, 01001</a>
-                <br><a href="tel:+38 044 278-13-57"
+                <br><a href="tel:+38044278-13-57"
                 class="museum-info__work-column
                 museum-info__work-column--footer
                 museum-info__work-column--footer-hover"
                 >тел. +38 (044) 278-13-57</a>
-                <br><a href="fax:+38 044 278-74-54"
+                <br><a href="fax:+38044278-74-54"
                 class="museum-info__work-column
                 museum-info__work-column--footer
                 museum-info__work-column--footer-hover"
