--- a/src/index.html
+++ b/src/index.html
@@ -307,7 +307,11 @@
             </a>
 
             <div class="footer__socials">
-              <a href="index.html" class="footer__social">
+              <a
+                href="https://uk-ua.facebook.com/"
+                class="footer__social"
+                target="_blank"
+              >
                 <picture>
                   <img
                     class="footer__icon"
@@ -317,7 +321,11 @@
                   >
                 </picture>
               </a>
-              <a href="index.html" class="footer__social">
+              <a
+                href="https://www.instagram.com/"
+                class="footer__social"
+                target="_blank"
+              >
                 <picture>
                   <img
                     class="footer__icon"
