--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
       </section>
 
       <!-- info -->
-      <section class="section info">
+      <section class="section info" id="info">
         <div class="info__imgs">
           <picture>
             <img
@@ -165,7 +165,7 @@
       <!-- gallery -->
       <section class="section gallery">
         <div class="section__container">
-          <div class="gallery__block">
+          <div class="gallery__block" id="gallery">
             <h2 class="h2 gallery__title">Галерея</h2>
 
             <div class="gallery__desk">
@@ -358,7 +358,7 @@
               <div class="footer__info">
                 <div class="footer__cont">Контакти:</div>
                 <div class="footer__cont">
-                  <p>вул. М. Грушевського, 6; Київ, 01001</p>
+                  <p><a href="index.html">вул. М. Грушевського, 6; Київ, 01001</a></p>
                   <p>тел. <a href="tel:+380442781357">+38 (044) 278-13-57</a></p>
                   <p>факс <a href="tel:+380442787454">+38 (044) 278-74-54</a></p>
                   <p>e-mail: <a href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a></p>
@@ -368,13 +368,13 @@
 
             <ul class="text text--size-3 footer__items">
               <li class="footer__item">
-                <a href="index.html" class="footer__link">Галерея</a>
+                <a href="#gallery" class="footer__link">Галерея</a>
               </li>
               <li class="footer__item">
-                <a href="index.html" class="footer__link">Про Нас</a>
+                <a href="#info" class="footer__link">Про Нас</a>
               </li>
               <li class="footer__item">
-                <a href="index.html" class="footer__link">Виставки та події</a>
+                <a href="#events" class="footer__link">Виставки та події</a>
               </li>
               <li class="footer__item">
                 <a href="index.html" class="footer__link">Контакти</a>
