add eco cosmetics landing

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,446 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Eco-cosmetics</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link 
+      rel="shortcut icon"
+      type="image/ico"
+      href="images/top-bar/logo.svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link 
+      rel="preconnect" 
+      href="https://fonts.gstatic.com" 
+      crossorigin="#"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Poppins:wght@400;500;600&family=Roboto&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header page__section page__section--header">
+      <div class="header__top top-bar">
+        <a href="#" class="top-bar__icon--desktop">
+          <img
+            src="images/top-bar/logo-desktop.png"
+            class="top-bar__logo--desktop"
+            alt="logo Eco-cosmetics"
+          >
+        </a>
+
+        <a href="#menu" class="top-bar__icon top-bar__menu">
+          <img src="images/top-bar/Menu.svg" alt="logo Eco-cosmetics">
+        </a>
+
+        <a href="#" class="top-bar__icon top-bar__logo--mobile">
+          <img src="images/top-bar/logo.svg" alt="logo Eco-cosmetics">
+        </a>
+
+        <nav class="header__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link nav__link--header" href="#shop">Shop</a>
+            </li>
+  
+            <li class="nav__item">
+              <a class="nav__link nav__link--header" href="#contact">Contact</a>
+            </li>
+  
+            <li class="nav__item">
+              <a class="nav__link nav__link--header" href="#about">About</a>
+            </li>
+          </ul>
+        </nav>
+
+        <a href="#" class="top-bar__icon top-bar__shop">
+          <img src="images/top-bar/shop.svg" alt="logo Eco-cosmetics">
+        </a>
+      </div>
+
+
+      <div class="header__img"></div>
+
+      <div class="header__content">
+        <h1 class="header__title">
+          Brand of eco-cosmetics and magic candles
+        </h1>
+        <p class="header__text">
+          20% of sales at a wild bird shelter
+        </p>
+        <a class="header__button" href="#">
+          <button class="button button--center button--desktop">shop</button>
+        </a>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__top top-bar">
+        <a href="#" class="top-bar__icon top-bar__close">
+          <img src="images/top-bar/close.svg" alt="close">
+        </a>
+      </div>
+
+      <nav class="menu__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#shop">Shop</a>
+          </li>
+
+          <li class="nav__item">
+            <a class="nav__link" href="#contact">Contact</a>
+          </li>
+
+          <li class="nav__item">
+            <a class="nav__link" href="#about">About</a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
+
+    <main>
+      <section class="action">
+        <div class="action__line action__line--left"></div>
+
+        <div class="page__section page__section--action action__wrap">
+          <p class="action__text">
+            Biologists say that birds are indicators of the environmental situation, and over the past half century, the population of seabirds has declined by 70%. Birds die due to environmental problems and human intervention in the natural environment.
+          </p>
+          <h2 class="action__title">
+            if you choose the gifts of nature and care about it’s - scroll down
+          </h2>
+        </div>
+
+        <div class="action__line action__line--right"></div>
+      </section>
+
+      <section class="page__section about" id="about">
+        <div class="about__category">
+          <img
+            src="images/about/categoryLeft__about.png"
+            alt="category about"
+            class="about__category-img"
+          >
+        </div>
+
+        <div class="about__wrap">
+          <h1 class="about__title">
+            about our brand
+          </h1>
+
+          <p class="about__text">
+            Our brand cosmetics are made from natural ingredients and we are promoting them to the masses. Shampoo, hair conditioner, soap - in recycled paper. Creams, oils, washing products in glass containers with recycled paper labels. No synthetics and microplastics in cosmetics. And the packaging from it can be returned for recycling or reused.
+          </p>
+
+          <p class="about__text about__text__desktopOnly">
+            We are all neighbors of one big House. And we must protect what we have. Destroying everything around for the sake of consumerism and imaginary convenience, we destroy what does not belong to us. Be aware of your choice!
+          </p>
+
+          <a href="#about-creators" class="about__link">
+            LEARN MORE
+          </a>
+        </div>
+
+        <div class="about__photo about__photo--1">
+          <img
+            src="images/about/candle1_about.jpg" 
+            alt="candle1"
+            class="about__photo__img"
+          >
+        </div>
+
+        <div class="about__photo about__photo--2">
+          <img
+            src="images/about/candle2_about.jpg"
+            alt="candle2"
+            class="about__photo__img"
+          >
+        </div>
+      </section>
+
+      <section class="page__section shop" id="shop">
+        <div class="shop__category">
+          <img 
+            src="images/products/categoryLeft__shop.png"
+            alt="category shop"
+            class="shop__category-img"
+          >
+        </div>
+
+        <div class="shop__wrap">
+          <h1 class="shop__title">shop</h1>
+          <div class="shop__nav">
+            <ul class="shop__list">
+              <li class="shop__item">
+                <a href="#" class="shop__item__link">face</a>
+              </li>
+              <li class="shop__item">
+                <a href="#" class="shop__item__link">body</a>
+              </li>
+              <li class="shop__item">
+                <a href="#" class="shop__item__link">hair</a>
+              </li>
+              <li class="shop__item">
+                <a href="#" class="shop__item__link">candles</a>
+              </li>
+            </ul>
+          </div>
+          <div class="shop__products">
+            <article class="product">
+              <img
+                src="/images/products/oil.jpg"
+                class="product__img"
+                alt="product oil"
+              >
+              <div class="product__about">
+                <h3 class="product__title">Hydrophilic oil</h3>
+                <div class="product__price">16 PLN</div>
+              </div>
+            </article>
+
+            <article class="product product__desktop">
+              <img
+                src="/images/products/cosmetic2.jpg"
+                class="product__img"
+                alt="product oil"
+              >
+              <h3 class="product__title">ubtan</h3>
+              <div class="product__price">16 PLN</div>
+            </article>
+          </div>
+
+          <a class="shop__button" href="#">
+            <button class="button button--center">all products</button>
+          </a>
+        </div>
+
+      </section>
+
+      <section class="page__section about-creators" id="about-creators">
+        <div class="about-creators__category">
+          <img
+            src="images/about/categoryLeft__about-creators.png"
+            alt="category about-creators"
+            class="about-creators__category-img"
+          >
+        </div>
+
+        <div class="about-creators__wrap">
+          <h1 class="about-creators__title">
+            about the creators
+          </h1>
+          <p class="about-creators__text">
+            My name is Victoria, I’m a master at candle making and natural cosmetics. In the past, a cynologist, was engaged in herbs, made layouts on the Tarot.
+          </p>
+          <p class="about-creators__text">
+            I am also a volunteer to save wild birds in distress, a consultant to the Phoenix Wildlife Rehabilitation Center, a member of the Society for the Conservation of Birds of Ukraine with the support of Birdlife International.
+          </p>
+
+          <p class="about-creators__text about-creators__text--desctop">
+            My husband and I live in the Carpathian region in the city of Chernivtsi. I dream of my center for the rehabilitation of wild birds, as it is very difficult to rescue birds in a rented communal apartment.
+          </p>
+          <a href="#" class="about__link about-creators__link">
+            LEARN MORE
+          </a>
+          <a href="#contact" class="about-creators__link">
+            <button class="button about-creators__button">to contact us</button>
+          </a>
+        </div>
+
+        <div class="about-creators__photo"></div>
+      </section>
+
+      <section class="page__section ingredients" id="ingredients">
+        <div class="ingredients__category">
+          <img
+            src="images/ingrediens/categoryLeft__ingrediens.png"
+            alt="category ingredients"
+            class="ingredients__category-img"
+          >
+        </div>
+
+        <div class="ingredients__wrap ingredients__wrap--left">
+          <h1 class="ingredients__title">
+            Ayurvedic Tooth Powder
+          </h1>
+          <div class="ingredients__scheme ingredients__scheme--mobile">
+            <ul class="ingredients__list">
+              <li class="ingredients__item ingredients__item--paddingBot--52">Kaolin</li>
+              <li class="ingredients__item ingredients__item--paddingBot--49">Sivak</li>
+              <li class="ingredients__item ingredients__item--paddingBot--52">Calcium</li>
+              <li class="ingredients__item ingredients__item--paddingBot--49">Licorice root</li>
+              <li class="ingredients__item">Turmeric</li>
+            </ul>
+            <div class="ingredients__img"></div>
+          </div>
+          <a href="#" class="ingredients__link">
+            LEARN MORE
+          </a>
+        </div>
+
+        <div class="ingredients__scheme ingredients__scheme--right">
+          <ul class="ingredients__list">
+            <li class="ingredients__item ingredients__item--paddingBot--52">Kaolin</li>
+            <li class="ingredients__item ingredients__item--paddingBot--49">Sivak</li>
+            <li class="ingredients__item ingredients__item--paddingBot--52">Calcium</li>
+            <li class="ingredients__item ingredients__item--paddingBot--49">Licorice root</li>
+            <li class="ingredients__item">Turmeric</li>
+          </ul>
+          <div class="ingredients__img"></div>
+        </div>
+      </section>
+
+      <section class="page__section pros">
+        <div class="pros__item">
+          <img 
+            src="/images/ingrediens/no_synthetics.svg"
+            alt="no_synthetics"
+            class="pros--img"
+          >
+          <h4 class="pros--description">No synthetics and microplastics</h4>
+        </div>
+
+        <div class="pros__item">
+          <img
+            src="/images/ingrediens/recycled.svg"
+            alt="recycled"
+            class="pros--img"
+          >
+          <h4 class="pros--description">product packaging can be recycled or reused</h4>
+        </div>
+
+        <div class="pros__item">
+          <img 
+            src="/images/ingrediens/natural_ingredients.svg"
+            alt="natural_ingredients"
+            class="pros--img"
+          >
+          <h4 class="pros--description">only natural ingredients</h4>
+        </div>
+      </section>
+
+      <section class="page__section contact" id="contact">
+        <div class="contact__category">
+          <img
+            src="images/contact/categoryLeft__contact.png"
+            alt="category contact"
+            class="contact__category-img"
+          >
+        </div>
+
+        <div class="contact__wrap">
+          <h1 class="contact__title">
+            contact us
+          </h1>
+          <p class="contact__text">
+            We will help you choose a product that suits you and answer your other questions
+          </p>
+          <div class="contact__form form">
+            <form
+              action="get"
+              method="dialog"
+              onsubmit="this.reset();
+              return false;"
+            >
+              <label for="name">
+                <input
+                  name="Your Name"
+                  type="text"
+                  placeholder="Your Name"
+                  class="form__field"
+                  required
+                >
+              </label>
+              <label for="email">
+                <input
+                  name="Email"
+                  type="email"
+                  placeholder="E-Mail"
+                  class="form__field"
+                  required
+                >
+              </label>
+              <label for="tel">
+                <input
+                  name="Phone"
+                  type="tel"
+                  placeholder="Phone Number"
+                  class="form__field"
+                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}"
+                  required
+                >
+              </label>
+              <label for="message">
+                <textarea
+                  name="Your Message"
+                  placeholder="Your Message"
+                  class="
+                    form__field
+                    form__field--textarea"
+                    required
+                ></textarea>
+              </label>
+              <button class="button contact__button">send a message</button>
+            </form>
+          </div>
+        </div>
+
+        <div class="contact__img"></div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__wrap">
+        <nav class="footer__nav nav">
+          <ul class="nav__list nav__list--footer">
+            <li class="nav__item nav__item--footer">
+              <a class="nav__link" href="#shop">Shop</a>
+            </li>
+  
+            <li class="nav__item nav__item--footer">
+              <a class="nav__link" href="#contact">Contact</a>
+            </li>
+  
+            <li class="nav__item nav__item--footer">
+              <a class="nav__link" href="#about">About</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__socials">
+          <a
+            class="footer__socials__link footer__socials__link--fb"
+            href="https://facebook.com/"
+            target="_blank"
+          >
+            <img src="/images/footer/fb.jpg" alt="facebook">
+          </a>
+          <a
+            class="footer__socials__link footer__socials__link--insta"
+            href="https://instagram.com/"
+            target="_blank"
+          >
+            <img src="/images/footer/insta.jpg" alt="instagram">
+          </a>
+        </div>
+        <div class="footer__support">
+          <a class="footer__support__item footer__support__item--email" href="mailto:support.mountain@gmail.com">
+            support.mountain@gmail.com
+          </a>
+          <a class="footer__support__item footer__support__item--tel" href="tel:+48340500403">
+            340500403
+          </a>
+          <p class="footer__support__item footer__support__item--info">
+            Support is available Monday - Friday 9am-6pm
+          </p>
+        </div>
+        <div class="footer__copywriting">
+          <div class="footer__copywriting__text">
+            <span class="footer__copywriting__text--none">Copyright</span>&copy; 2023 witch of mountain winds
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
