--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,13 @@
       <div class="header__menu">
         <ul class="header__list">
           <li class="header__item">
-            <a href="index.html" class="header__link">Галерея</a>
+            <a href="#gallery" class="header__link">Галерея</a>
           </li>
           <li class="header__item">
-            <a href="index.html" class="header__link">Про Нас</a>
+            <a href="#info" class="header__link">Про Нас</a>
           </li>
           <li class="header__item">
-            <a href="index.html" class="header__link">Виставки та події</a>
+            <a href="#events" class="header__link">Виставки та події</a>
           </li>
           <li class="header__item">
             <a href="index.html" class="header__link">Контакти</a>
